--- a/1.html
+++ b/1.html
@@ -3,5 +3,11 @@
 		<a href="pattern.html">1. Какие знаете шаблоны проектирования? Расскажите о двух шаблонах, которые использовали в работе.</a>
 	</div>
 	<div>
-		<a href="types.html">2. Какие есть типы данных в Java?</a>
+		<a href="types.html">2. Какие есть типы данных в Java?</a>3. Чем отличается объект от примитивных типов данных?
+	</div>
+	<div>
+		<a href="objectandprimitive.html">3. Чем отличается объект от примитивных типов данных?</a>
+	</div>
+	<div>
+		<a href="linkandmeaning.html">В чем разница передачи параметров по ссылке и по значению?</a>
 	</div>
