--- a/1.html
+++ b/1.html
@@ -11,3 +11,6 @@
 	<div>
 		<a href="linkandmeaning.html">В чем разница передачи параметров по ссылке и по значению?</a>
 	</div>
+	<div>
+		<a href="jdkjvmjre.html">5. Что такое JVM, JDK, JRE?</a>
+	</div>
