--- a/1.html
+++ b/1.html
@@ -14,3 +14,6 @@
 	<div>
 		<a href="jdkjvmjre.html">5. Что такое JVM, JDK, JRE?</a>
 	</div>
+	<div>
+		<a href="jwmwhy.html">5. Зачем используют JVM?</a>
+	</div>
