--- a/1.html
+++ b/1.html
@@ -15,5 +15,11 @@
 		<a href="jdkjvmjre.html">5. Что такое JVM, JDK, JRE?</a>
 	</div>
 	<div>
-		<a href="jwmwhy.html">5. Зачем используют JVM?</a>
+		<a href="jwmwhy.html">6. Зачем используют JVM?</a>
+	</div>
+	<div>
+		<a href="whatisbytecode.html">7. Что такое bytecode?</a>
+	</div>
+	<div>
+		<a href="8.html">8. Какие признаки JavaBean?</a>
 	</div>
