--- a/1.html
+++ b/1.html
@@ -23,3 +23,12 @@
 	<div>
 		<a href="8.html">8. Какие признаки JavaBean?</a>
 	</div>
+	<div>
+		<a href="9.html">9. Что такое OutOfMemoryError?</a>
+	</div>
+	<div>
+		<a href="9.html">10. Что такое стектрейс? Как его получить?</a>
+	</div>
+	<div>
+		<a href="12.html">12. В чем отличие между try-with-resources и try-catch-finally при работе с ресурсами?</a>
+	</div>
