--- a/1.html
+++ b/1.html
@@ -27,8 +27,29 @@
 		<a href="9.html">9. Что такое OutOfMemoryError?</a>
 	</div>
 	<div>
-		<a href="9.html">10. Что такое стектрейс? Как его получить?</a>
+		<a href="10.html">10. Что такое стектрейс? Как его получить?</a>
+	</div>
+	<div>
+		<a href="11.html">11. Назовите все методы класса object.</a>
 	</div>
 	<div>
 		<a href="12.html">12. В чем отличие между try-with-resources и try-catch-finally при работе с ресурсами?</a>
+	</div>
+	<div>
+		<a href="13.html">13. Что такое конструкторы? Какие типы знаете?</a>
+	</div>
+	<div>
+		<a href="14.html">14. Что такое побитовые операции?</a>
+	</div>
+	<div>
+		<a href="15.html">15. Дайте краткую характеристику immutable object. Зачем они нужны?</a>
+	</div>
+	<div>
+		<a href="16.html">16. Объекты каких стандартных классов immutable в Java?</a>
+	</div>
+	<div>
+		<a href="17.html">17. Как создать immutable object?</a>
+	</div>
+	<div>
+		<a href="18.html">18. Какие преимущества immutable object перед обычными объектами?</a>
 	</div>
