--- a/1.html
+++ b/1.html
@@ -53,3 +53,9 @@
 	<div>
 		<a href="18.html">18. Какие преимущества immutable object перед обычными объектами?</a>
 	</div>
+	<div>
+		<a href="19.html">19. Что такое ООП? Назовите принципы с примерами.</a>
+	</div>
+	<div>
+		<a href="20.html">20. В чем преимущества ООП перед процедурным программированием?</a>
+	</div>
