--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
-<html>
+<!DOCTYPE html>
+<html lang="ru">
+	<head>
+		<meta charset="UTF-8">
+		<title>Ваш заголовок</title>
+	</head>
 	<div>
 		<a href="pattern.html">1. Какие знаете шаблоны проектирования? Расскажите о двух шаблонах, которые использовали в работе.</a>
 	</div>
@@ -53,9 +58,17 @@
 	<div>
 		<a href="18.html">18. Какие преимущества immutable object перед обычными объектами?</a>
 	</div>
+	<h3>ООП</h3>
 	<div>
 		<a href="19.html">19. Что такое ООП? Назовите принципы с примерами.</a>
 	</div>
 	<div>
 		<a href="20.html">20. В чем преимущества ООП перед процедурным программированием?</a>
 	</div>
+	<div>
+		<a href="21.html">21. В чем заключается главная особенность ООП?</a>
+	</div>
+	<div>
+		<a href="21.html">24. Расскажите о принципе наследования в ООП? Зачем он нужен?</a>
+	</div>
+	</html>
