--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 	<head>
 		<meta charset="UTF-8">
-		<title>Ваш заголовок</title>
+		<title>250 вопросов</title>
 	</head>
 	<div>
 		<a href="pattern.html">1. Какие знаете шаблоны проектирования? Расскажите о двух шаблонах, которые использовали в работе.</a>
@@ -70,5 +70,23 @@
 	</div>
 	<div>
 		<a href="21.html">24. Расскажите о принципе наследования в ООП? Зачем он нужен?</a>
+	</div>
+	<div>
+		<a href="25.html">25. Дайте определение принципа полиморфизма в ООП? Как работает полиморфизм?</a>
+	</div>
+	<div>
+		<a href="26.html">26. Что такое статический и динамический полиморфизм?</a>
+	</div>
+	<div>
+		<a href="27.html">27. Дайте определение принципа абстракции в ООП.</a>
+	</div>
+	<div>
+		<a href="28.html">28. Какие элементы языка отвечают за инкапсуляцию?</a>
+	</div>
+	<div>
+		<a href="29.html">29. Какие элементы языка отвечают за наследование?</a>
+	</div>
+	<div>
+		<a href="30.html">30. Какие элементы языка отвечают за полиморфизм?</a>
 	</div>
 	</html>
