--- a/index.html
+++ b/index.html
@@ -89,4 +89,25 @@
 	<div>
 		<a href="30.html">30. Какие элементы языка отвечают за полиморфизм?</a>
 	</div>
+	<div>
+		<a href="31.html">31. Что такое SOLID? Приведите примеры.</a>
+	</div>
+	<div>
+		<a href="32.html">32. Что такое перегрузки (overloading) метода?</a>
+	</div>
+	<div>
+		<a href="33.html">33. Что такое переопределение (override) метода?</a>
+	</div>
+	<div>
+		<a href="34.html">34. Что такое класс, объект, интерфейс?</a>
+	</div>
+	<div>
+		<a href="35.html">35. Что такое класс POJO? Приведите пример такого класса.</a>
+	</div>
+	<div>
+		<a href="36.html">36. Какие элементы могут содержать класс?</a>
+	</div>
+	<div>
+		<a href="37.html">37. Дайте определение объекта.</a>
+	</div>
 	</html>
