--- a/index.html
+++ b/index.html
@@ -110,4 +110,22 @@
 	<div>
 		<a href="37.html">37. Дайте определение объекта.</a>
 	</div>
+	<div>
+		<a href="38.html">38. Расскажите о наследовании в Java. Какие особенности использования ключевого слова super?</a>
+	</div>
+	<div>
+		<a href="39.html">39. Что такое сигнатура метода? Приведите примеры правильных и неправильных сигнатур.</a>
+	</div>
+	<div>
+		<a href="40.html">40. Можно ли в конструкторе применять return?</a>
+	</div>
+	<div>
+		<a href="41.html">41. Можно ли в конструкторе выкинуть исключение (exception)?</a>
+	</div>
+	<div>
+		<a href="45.html">45. Когда применяется ключевое слово this?</a>
+	</div>
+	<div>
+		<a href="45.html">46. Что такое инициализатор? </a>
+	</div>
 	</html>
