--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 		<title>250 вопросов</title>
 	</head>
 	<div>
+		<a href="sql.html">SQL сайт</a>
+	</div>
+	<div>
 		<a href="pattern.html">1. Какие знаете шаблоны проектирования? Расскажите о двух шаблонах, которые использовали в работе.</a>
 	</div>
 	<div>
