--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 		<a href="sql.html">SQL сайт</a>
 	</div>
 	<div>
+		<a href="sql2.html">SQL2 сайт</a>
+	</div>
+	<div>
 		<a href="pattern.html">1. Какие знаете шаблоны проектирования? Расскажите о двух шаблонах, которые использовали в работе.</a>
 	</div>
 	<div>
