--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="ru">
+<!DOCTYPE html>vv
+<html lang="ru">  
 	<head>
 		<meta charset="UTF-8">
 		<title>250 вопросов</title>
